--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native": "^0.48.4",
     "react-native-cli": "^2.0.1",
     "react-navigation": "^1.0.0-beta.13",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "watchman": "^0.1.8"
   }
 }
