--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "sdkVersion": "21.0.0"
+    "sdkVersion": "21.0.0",
     "orientation": "portrait",
     "name": "LoevDaMobileFlashCard",
     "description": "The best flash card app in the world",
